--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,46 @@
  	margin: 0;
  	padding: 0;
  	box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 body {
     max-width: 512px;
+    margin: 1rem;
+    padding: 1rem;
+}
+
+#jumbotron {
+    margin: 6rem 0rem; 
+    text-align: center;
+}
+#lama-icon {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+.link-button {
+    margin-top: 2rem;
+    border: 1px solid;
+    padding: 1rem 2rem;
+    background-color: black;
+    color: white;
+    border-radius: 2rem;
+    display: inline-block;
+}
+#lama-cooking {
+    width: 200px;
+    display: block;
+    position: relative;
+    left: 50%;
+    translate: -50% 0;
+}
+.section-title {
+    text-align: center;
+}
+#menu-icon {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 50px;
 }
