--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,7 @@ i {
     border-radius: 1rem;
     margin: 1rem;
     padding: 2rem;
+    margin-bottom: 4rem;
 }
 #cta-title {
     padding-bottom: 1rem;
@@ -89,10 +90,25 @@ i {
     padding-right: 2rem;
 }
 .cta-list-element {
-    margin-bottom:1rem ;
+    margin-bottom:1rem;
 }
 #create-button {
     display: block;
     margin:2rem auto;
     text-align: center;
+}
+.social-link {
+    opacity: 0.5;
+    text-decoration: none;
+    color: black;
+    padding: 0.5rem;
+}
+.social-link-group {
+    display: block;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+footer {
+    text-align: center;
+    opacity: 0.5;
 }
